# malachite

./: .gitignore  Cargo.toml  PKGBUILD  README.md  example-mlc.toml  flake.nix
.devcontainer/: Dockerfile  devcontainer.json  rust.sh  setup.sh
docs/: COMMON_FEATURES.md  GETTING_STARTED.md  REPOSITORY_MODE.md  USAGE.md  WORKSPACE_MODE.md
example/: mlc.toml
examples/repository/: mlc.toml
examples/workspace/: mlc.toml
src/: args.rs  main.rs
src/internal/: exit_codes.rs  mod.rs  read.rs  strings.rs  structs.rs
src/operations/: build.rs  clean.rs  clone.rs  config.rs  info.rs  init.rs  mod.rs  prune.rs  pull.rs
src/repository/: config.rs  mod.rs  package.rs  repo.rs
src/workspace/: mod.rs  read.rs
