[package]
name = "Malachite"
version = "1.2.0"
authors = [ "michal <michal@tar.black>" ]
edition = "2021"
description = "Packaging tool for pacman repositories"
license-file = "LICENSE.md"

[[bin]]
name = "mlc"
path = "src/main.rs"

[profile.release]
incremental = true
debug = false
lto = "fat"
codegen-units = 1

[dependencies]
mimalloc = { version = "0.1.27", default-features = false }
clap = { version = "2.34.0", default-features = false }
toml = { version = "0.5.8", default-features = false }
serde = { version = "1.0.134", default-features = false }
serde_derive = { version = "1.0.134", default-features = false }
