[package]
name = "Malachite"
version = "2.0.0"
authors = [ "michal <michal@tar.black>" ]
edition = "2021"
description = "Packaging tool for pacman repositories"
repository = "https://github.com/crystal-linux/malachite"
license-file = "LICENSE"
keywords = [ "pacman", "repository", "packaging" ]
categories = [ "filesystem", "development-tools" ]

[[bin]]
name = "mlc"
path = "src/main.rs"

[profile.release]
incremental = true
debug = false
lto = "fat"
codegen-units = 1

[dependencies]
mimalloc = { version = "0.1.29" }
clap = { version = "3.2.8", features = ["derive", "suggestions"] }
toml = { version = "0.5.9", default-features = false }
serde = { version = "1.0.139", default-features = false }
serde_derive = { version = "1.0.139", default-features = false }
libc = { version = "0.2.126", default-features = false }
colored = { version = "2.0.0", default-features = false }
tabled = { version = "0.8.0", default-features = false, features = ["derive"] }
termion = { version = "1.5.6", default-features = false }
regex = { version = "1.6.0", default-features = false, features = ["std"] }
